--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title></title>
+	<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>	
+	<title>Kirsch Web Template</title>
 </head>
-<body>  
+<body>
+	This is my web template. I will replace these words with code.
 </body>
 </html>
